--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <tr>
             <td>
                 <div class="img-container">
-                <img src="images/Photo.jpg" alt="Sarthak's Portrait">
+                <img src="Images/Photo.jpg" alt="Sarthak's Portrait">
                 </div>
             </td>
             <td><h1>Sarthak Chaudhari</h1>
